<resources>
    <string name="app_name">Colorized notes</string>
    <string name="add_note">Add Note</string>
    <string name="pinned_note">Pinned</string>
    <string name="go_back">Go back</string>
    <string name="save_note">Save Note</string>
    <string name="title">Title</string>
    <string name="enter_body">Enter your note.....</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ask_cancel_changes">Are you sure to cancel changes you made ??</string>
    <string name="cancel_changes">Cancel Changes</string>
    <string name="title_error">note title can\'t be empty</string>
    <string name="body_error">note body can\'t be empty</string>
    <string name="add_first_note">Create your first note !</string>
    <string name="search_note">Enter note title.....</string>
    <string name="empty_search">File not found. Try searching again.</string>
    <string name="empty_notes">Create your first note !</string>
    <string name="not_archived_notes">No archived notes founded</string>
    <string name="not_favorites_notes">No favorites notes founded</string>
    <string name="welcome">Welcome</string>
    <string name="discard">Discard</string>
    <string name="no_pinnedNotes">No pinned notes. Pin one and try again.</string>
    <string name="save">Save</string>
    <string name="keep">Keep</string>
    <string name="discard_note">Are you sure you want discard your changes ?</string>
    <string name="warning">Warning</string>
    <string name="save_changes">Save changes ?</string>
    <string name="choose_color">Choose color</string>
    <string name="edit_note">Edit note</string>
    <string name="share_note">Share note</string>
    <string name="list_note">List/Grid</string>
    <string name="splash_desc">Write what you want.....</string>
    <string name="no_notes">There is no note exist</string>
    <string name="locked_note">This note is locked</string>
    <string name="password_hint_star">****</string>
    <string name="wrong_password">Wrong Password</string>
    <string name="enter_password">Enter password for your note…</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="remove_password">Are yu sure to remove password ??</string>
    <string name="remove_note">Are yu sure to remove this note ??</string>
    <string name="note_locked">This note already locked</string>
    <string name="close">Close</string>
    <string name="note_image">image Note</string>
    <string name="max_images">You can select only three images</string>
    <string name="error_in_save">Error in save image</string>
    <string name="tips">Tips</string>
    <string name="delete_note">Delete note</string>
    <string name="delete">Delete</string>
    <string name="swipe_left">you can swipe left to delete note</string>
    <string name="pin_note">Pin note</string>
    <string name="pin">Pin</string>
    <string name="unpin">UnPin</string>
    <string name="archive">Archive</string>
    <string name="unarchive">UnArchive</string>
    <string name="archived">Archived</string>
    <string name="swipe_right">you can swipe right to pin note</string>
    <string name="show_details">show details</string>
    <string name="click_on_note">you can click on note to show details</string>
    <string name="tooltip_search">you can write any word to search about it</string>
    <string name="new_note">New note</string>
    <string name="tooltip_add_note">you press this button to create new note</string>
    <string name="never_show_again">Never show again</string>
    <string name="continue_button">continue</string>
    <string name="share_using">Share Using</string>
    <string name="sharing_note" translatable="false">%1$s: %2$s\n\n\n%3$s: %4$s</string>
    <string name="body">body</string>
    <string name="all_notes">All Notes</string>
    <string name="main">Main</string>
    <string name="select_one_image_at_least">Select one image at least</string>


    <string name="dummy_title" translatable="false">What is Lorem Ipsum?</string>
    <string name="dummy_date" translatable="false">19/06/2015 17:35:50, Utc</string>
    <string name="dummy_body" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s. It is a long established fact that a reader will be distracted
        by the content of a page when looking at its layout.Contrary to popular belief, Lorem Ipsum is not simply random text.
            It has roots in a piece of classical Latin literature.
        </string>

    <string name="increase_font_size">increase font size</string>
    <string name="decrease_font_size">decrease font size</string>
    <string name="align_right">align right</string>
    <string name="align_center">align center</string>
    <string name="align_left">align left</string>
    <string name="underline_text">underline text</string>
    <string name="italic_text">italic text</string>
    <string name="bold_text">bold text</string>

    <string name="immediate_update_message">Update Required:\n We apologize for the interruption,
        but an important update is necessary to continue using our app. This update includes critical
        enhancements and fixes that improve your app experience. Please consider updating now to enjoy the
        latest features and ensure optimal performance.\nThank you for your understanding and support!</string>

    <string name="flexible_update_message">Update available! Although it\'s optional,
        we suggest updating for cool new features and improvements. Exciting updates coming soon!
        Easily update at your convenience in the "Settings" section.\nThanks for using our app!</string>
    <string name="restart">Restart</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="update_complete_message">An update has just been downloaded</string>
    <string name="biometric_authentication_failed">Biometric Authentication Failed please try again</string>

    <string name="t" translatable="false">T</string>
    <string name="biometric_title">Biometric Authentication</string>
    <string name="biometric_subtitle">Use your fingerprint or Password to authenticate</string>
    <string name="enable_biometric">Enable Biometric</string>
    <string name="setting">Settings</string>

    <string name="view_notes_as">View Notes As</string>
    <string name="note_view_mode_summary_on">View notes in a list for easier reading and more detailed information.</string>
    <string name="note_view_mode_summary_off">Display notes in a grid layout for better visual organization and quick access.</string>

    <string name="sort_title">Default sort action</string>

    <string name="sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_order">Sort order</string>
    <string name="theme">Theme</string>
    <string name="select_app_theme">Select app theme</string>
    <string name="contact_us">Contact us</string>
    <string name="our_apps">Our Apps</string>
    <string name="get_in_touch">Get in Touch</string>
    <!--    <string name="get_in_touch_desc">if u have any inquires get in touch with us.\nWe\'ll be happy to help you.</string>-->
    <string name="get_in_touch_desc">if u have any inquiries get in touch with us.\nWe\'ll be happy to help you.</string>
    <string name="social_media">Social Media</string>

    <string name="gmail_name" translatable="false">Abdelrahman Raafat</string>
    <string name="email" translatable="false">abdelrahman.raafaat@gmail.com</string>
    <string name="email_title" translatable="false">Colorized notes</string>
    <string name="telegram_user_name" translatable="false">abdelrahman_raafat</string>
    <string name="telegram_link" translatable="false">https://t.me/abdelrahman_raafat</string>
    <string name="facebook_link" translatable="false">https://www.facebook.com/abdo.raafat.amer/</string>
    <string name="instagram_link" translatable="false">https://www.instagram.com/abdo.raafat.amer/</string>
    <string name="twitter_link" translatable="false">https://twitter.com/Abdo_Rafat_Amer</string>
    <string name="linkedin_link" translatable="false">https://www.linkedin.com/in/abdelrahman-raafat-anwer-amer/</string>
    <string name="medium_link" translatable="false">https://medium.com/@abdelrahman.raafaat</string>
    <string name="google_play_link" translatable="false">https://play.google.com/store/apps/developer?id=Abdelrahman+Rafaat</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="passwords">Passwords</string>
    <string name="create_password">Create a password\nto secure your passwords</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="password_hint">Password Hint</string>
    <string name="create">Create</string>
    <string name="filed_required">This field can\'t be empty!</string>
    <string name="password_error_message">Password mustn\'t less than 6 chars</string>
    <string name="confirm_password_error">Confirm password must be the same password</string>
    <string name="hint_password_warning">Remember: adding a hint to your password can save you from future headaches!</string>
    <string name="hint_password_empty_confirm">Please confirm: intentionally leaving the password hint empty?</string>
    <string name="your_password_hint_is">Your password hint is</string>
    <string name="email_username">Email / Username</string>
    <string name="password">Password</string>
    <string name="website_name">Website Name</string>
    <string name="add_password">Add Password</string>
    <string name="empty_password">You didn\'t add any passwords yet.</string>
</resources>