<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allNotesButton"
        style="@style/Widget.Notes.Button.AppCompatButton"
        android:drawableStart="@drawable/ic_note"
        android:text="@string/main"
        tools:background="@color/color1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favoritesNotesButton"
        style="@style/Widget.Notes.Button.AppCompatButton"
        android:drawableStart="@drawable/ic_favorite"
        android:text="@string/favorites"
        tools:background="@color/color2"
        tools:layout_marginVertical="70dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/archivedNotesButton"
        style="@style/Widget.Notes.Button.AppCompatButton"
        android:drawableStart="@drawable/ic_archive"
        android:drawableTint="@color/mainColor"
        android:text="@string/archived"
        tools:background="@color/color3"
        tools:layout_marginVertical="120dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/settingButton"
        style="@style/Widget.Notes.Button.AppCompatButton"
        android:drawableStart="@drawable/ic_setting"
        android:drawableTint="@color/mainColor"
        android:text="@string/setting"
        tools:background="@color/red"
        tools:layout_marginVertical="170dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/passwordsButton"
        style="@style/Widget.Notes.Button.AppCompatButton"
        android:drawableStart="@drawable/ic_lock_green"
        android:text="@string/passwords"
        tools:background="@color/color4"
        tools:layout_marginVertical="220dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/contactUsButton"
        style="@style/Widget.Notes.Button.AppCompatButton"
        android:drawableStart="@drawable/ic_contact_us"
        android:text="@string/contact_us"
        tools:background="@color/color5"
        tools:layout_marginVertical="270dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ourAppsButton"
        style="@style/Widget.Notes.Button.AppCompatButton"
        android:drawableStart="@drawable/ic_google_play"
        android:text="@string/our_apps"
        tools:background="@color/color6"
        tools:layout_marginVertical="320dp" />
</merge>