<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_View"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7sp"
    app:cardCornerRadius="12sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7sp">

        <ImageView
            android:id="@+id/pinnedNote_imageView"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentEnd="true"
            android:layout_margin="7sp"
            android:contentDescription="@string/pinned_note"
            android:src="@drawable/ic_pin"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noteTitle_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:text="@string/dummy_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/pinnedNote_imageView" />

        <TextView
            android:id="@+id/noteBody_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:maxLines="7"
            android:text="@string/dummy_body"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/noteTitle_textView" />

        <TextView
            android:id="@+id/noteDate_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7sp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/dummy_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/noteBody_textView" />

        <ImageView
            android:id="@+id/locked_note_ImageView"
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:contentDescription="@string/locked_note"
            android:src="@drawable/ic_lock"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>