<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tooltip.ToolTipActivity">

    <SearchView
        android:id="@+id/note_searchView"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="7sp"
        android:layout_marginTop="3sp"
        android:background="@drawable/ic_search_view_background"
        android:iconifiedByDefault="false"
        android:inputType="none"
        android:queryHint="@string/search_note"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notes_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="7sp"
        android:tooltipText="@string/add_note"
        app:layout_constraintBottom_toTopOf="@+id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/note_searchView"
        tools:listitem="@layout/custom_row_note" />


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:text="@string/never_show_again"
        app:layout_constraintBottom_toBottomOf="@+id/continueButton"
        app:layout_constraintEnd_toStartOf="@+id/continueButton"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/continueButton" />

    <Button
        android:visibility="gone"
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addNote_floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:backgroundTint="@color/mainColor"
        android:contentDescription="@string/add_note"
        android:scaleType="center"
        android:src="@drawable/ic_edit"
        app:fabCustomSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>