<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.PasswordFragment">

    <ImageView
        android:id="@+id/goBack_imageView"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/ic_search_view_background"
        android:contentDescription="@string/go_back"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lock_imageView"
        android:layout_width="90sp"
        android:layout_height="90sp"
        android:layout_marginTop="140sp"
        android:contentDescription="@string/locked_note"
        android:src="@drawable/ic_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordTitle_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7sp"
        android:text="@string/locked_note"
        android:textAlignment="center"
        android:textColor="?colorOnSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lock_imageView" />

    <com.chaos.view.PinView
        android:id="@+id/note_pinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="numberPassword"
        android:padding="10sp"
        android:textColor="@color/mainColor"
        android:textColorHint="@color/mainColor"
        android:textSize="25sp"
        android:textStyle="bold"
        app:cursorColor="?colorOnSecondary"
        app:itemHeight="70sp"
        app:itemRadius="25dp"
        app:itemSpacing="20dp"
        app:itemWidth="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineColor="?colorOnSecondary"
        app:lineWidth="3sp"
        app:viewType="rectangle">

        <requestFocus />
    </com.chaos.view.PinView>

    <TextView
        android:id="@+id/password_error_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:text="@string/wrong_password"
        android:textColor="?colorOnSecondary"
        android:textSize="23sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_pinView" />

</androidx.constraintlayout.widget.ConstraintLayout>