<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_note_rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.fragments.ShowNoteFragment">

    <ImageView
        android:id="@+id/goBack_imageView"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="25sp"
        android:background="@drawable/ic_search_view_background"
        android:contentDescription="@string/go_back"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/edit_note_ImageView"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/ic_search_view_background"
        android:contentDescription="@string/edit_note"
        android:scaleType="center"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/unlock_note_ImageView"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/ic_search_view_background"
        android:contentDescription="@string/edit_note"
        android:padding="2sp"
        android:src="@drawable/ic_unlock"
        app:layout_constraintEnd_toStartOf="@+id/edit_note_ImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shareNote"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:layout_marginTop="25sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/ic_search_view_background"
        android:contentDescription="@string/share_note"
        android:padding="2sp"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toStartOf="@+id/unlock_note_ImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/show_noteTitle_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:background="@android:color/transparent"
        android:text="@string/dummy_title"
        android:textColor="?colorOnSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/goBack_imageView" />

    <TextView
        android:id="@+id/show_noteBody_textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15sp"
        android:autoLink="web|email"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:linksClickable="true"
        android:scrollbars="vertical"
        android:textColor="?colorOnSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/show_noteTitle_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>